--- a/07-CustomJWTWithSessionManagement/CustomJWTWithSessionManagement/wwwroot/index.html
+++ b/07-CustomJWTWithSessionManagement/CustomJWTWithSessionManagement/wwwroot/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2FA Authentication</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./app.js"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md h-full">
@@ -32,6 +31,7 @@
             <div id="2fa-form" class="space-y-4 hidden">
                 <h2 class="text-xl font-semibold">Enter 2FA Code</h2>
                 <input id="2fa-username" type="hidden">
+                <input id="2fa-session-token" type="hidden">
                 <input id="2fa-code" type="text" placeholder="6-digit code" class="w-full p-2 border rounded">
                 <button onclick="verify2FA()" class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-600">Verify</button>
             </div>
@@ -42,12 +42,15 @@
             <div id="2fa-status" class="mb-4"></div>
             <div id="2fa-setup" class="hidden space-y-4">
                 <h3 class="text-lg font-semibold">Setup 2FA</h3>
-                <img id="qrcode" class="mx-auto" alt="QR Code">
+                <img id="qrcode" class="mx-auto hidden" alt="QR Code">
                 <p>Manual Code: <span id="manual-code" class="font-mono"></span></p>
-                <p>Scan the QR code or enter the manual code in your authenticator app.</p>
+                <p>Enter the manual code in your authenticator app.</p>
             </div>
             <button id="toggle-2fa" onclick="toggle2FA()" class="w-full bg-green-500 text-white p-2 rounded hover:bg-green-600"></button>
             <button onclick="getAssets()" class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-600">View Assets</button>
+            <h3 class="text-lg font-semibold">Active Sessions</h3>
+            <ul id="sessions-list" class="space-y-2"></ul>
+            <button onclick="revokeAllOtherSessions()" class="w-full bg-yellow-500 text-white p-2 rounded hover:bg-yellow-600">Logout All Other Sessions</button>
             <button onclick="logout()" class="w-full bg-red-500 text-white p-2 rounded hover:bg-red-600">Logout</button>
         </div>
         <p id="error" class="text-red-500 mt-4 hidden"></p>
